--- a/firebase.json
+++ b/firebase.json
@@ -6,7 +6,12 @@
       "startCommand": "npm run dev"
     },
     "auth": {
+      "host": "0.0.0.0",
       "port": 9099
+    },
+    "firestore": {
+      "host": "0.0.0.0",
+      "port": 8080
     },
     "ui": {
       "enabled": true
