--- a/apphosting.production.yaml
+++ b/apphosting.production.yaml
@@ -9,10 +9,10 @@ runConfig:
 # Environment variables and secrets
 env:
   - variable: GEMINI_API_KEY
-    projects/brew-news-dgvw4/secrets/GEMINI_API_KEY
+    secret: projects/brew-news-dgvw4/secrets/GEMINI_API_KEY
 
-  - variable: NEXT_PUBLIC_STORAGE_BUCKET
-    value: brew-news-dgvw4.firebasestorage.app
-    availability:
-    -   BUILD
-    -   RUNTIME
+  # - variable: NEXT_PUBLIC_STORAGE_BUCKET
+  #   value: brew-news-dgvw4.firebasestorage.app
+  #   availability:
+  #     - BUILD
+  #     - RUNTIME
