--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "typecheck": "tsc --noEmit",
-    "test": "jest"
+    "test": "jest --watch",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@genkit-ai/googleai": "^1.13.0",
@@ -58,7 +58,7 @@
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
-    "@types/jest": "^30.0.0",
+    "@testing-library/react": "^16.3.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -66,10 +66,8 @@
     "genkit-cli": "^1.13.0",
     "jest": "^30.0.4",
     "jest-environment-jsdom": "^30.0.4",
-    "jest-fetch-mock": "^3.0.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "ts-jest": "^29.4.0",
     "typescript": "^5"
   }
 }
